# test_nova

./: README.md
.github/workflows/: git-workflow.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/docmanager/api/: credentials.json  credentials.json.enc  decorators.py  serializers.py  token.json  token.json.enc  urls.py  utils.py  views.py
backend/docmanager/docmanager/: asgi.py  settings.py  urls.py  wsgi.py
docker/: docker-compose.yml
docker/nginx/: nginx.conf
docker_local/: docker-compose.yml
docker_local/nginx/: nginx.local.conf
